<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SubmitActivity">

    <View
        android:layout_width="250dp"
        android:layout_height="193dp"
        android:layout_marginStart="-138dp"
        android:layout_marginTop="-100dp"
        android:background="@drawable/background_ball"
        android:id="@+id/view_exit"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_white"
        android:id="@+id/image_exit"
        android:contentDescription="@string/back"
        android:layout_margin="15dp"
        app:tint="@color/white_2"
        />

    <View
        android:layout_width="1000dp"
        android:layout_height="650dp"
        android:background="@drawable/background_ball"
        android:layout_marginEnd="-520dp"
        android:layout_marginBottom="-460dp"
        android:layout_gravity="end|bottom"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_marginTop="15dp"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:src="@drawable/gads"
                android:id="@+id/image"
                android:contentDescription="@string/logo"
                android:layout_gravity="end"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_submission"
                android:gravity="center"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/gradient_line"
                android:layout_marginStart="@dimen/gradient_line_margin"
                android:layout_marginEnd="@dimen/gradient_line_margin"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/grey_black"
                    android:background="@drawable/submit_bg"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    android:autofillHints="Last Name"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/edit_firstname"
                    android:maxLines="1"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textColorHint="@color/grey_black"
                    android:background="@drawable/submit_bg"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    android:autofillHints="Last Name"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/edit_lastname"
                    android:maxLines="1"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:textColorHint="@color/grey_black"
                android:background="@drawable/submit_bg"
                android:layout_margin="15dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:autofillHints="email"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/edit_email"
                android:maxLines="1"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/project_on_github_link"
                android:textColorHint="@color/grey_black"
                android:background="@drawable/submit_bg"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:autofillHints="GitHub"
                android:inputType="textMultiLine"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/edit_githublink"
                android:maxLines="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:background="@drawable/submit_project_backgroud"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:id="@+id/submit"
                />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>